added cinder block config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,12 @@ macro(SET_OPTION option value)
   set(${option} ${value} CACHE "" INTERNAL FORCE)
 endmacro()
 project(cinder-numopt)
-SET_OPTION(NLOPT_CXX ON)
-SET_OPTION(NLOPT_PYTHON OFF)
-SET_OPTION(NLOPT_OCTAVE OFF)
-SET_OPTION(NLOPT_MATLAB OFF)
-SET_OPTION(NLOPT_GUILE OFF)
-SET_OPTION(NLOPT_SWIG OFF)
+# SET_OPTION(NLOPT_CXX ON)
+# SET_OPTION(NLOPT_PYTHON OFF)
+# SET_OPTION(NLOPT_OCTAVE OFF)
+# SET_OPTION(NLOPT_MATLAB OFF)
+# SET_OPTION(NLOPT_GUILE OFF)
+# SET_OPTION(NLOPT_SWIG OFF)
 # add_subdirectory(lib/nlopt nlopt)
 add_executable(testnlopt src/test.cpp)
 
